[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "units"
authors = [
  { name="Départ de Sentier", email="engineering@d-d-s.ch" }
]
maintainers = [
  { name="Départ de Sentier", email="engineering@d-d-s.ch" }
]
description = "Sustainability assessment classifications glossary."
readme = "README.md"
dynamic = ["version"]

classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "fastapi-versioning",
    "pydantic_settings~=2.0",
    "sentry-sdk[fastapi]",
    "SQLAlchemy>=2.0.0",
    "sqlalchemy-utils",
    "uvicorn[standard]",
]

[project.urls]
source = "https://github.com/sentier-dev/units"
homepage = "https://github.com/sentier-dev/units"
tracker = "https://github.com/sentier-dev/units/issues"

[project.optional-dependencies]
test = [
    "units",
    "httpx",
    "pytest",
    "pytest-cov",
    "python-coveralls",
]
dev = [
    "alembic",
    "build",
    "httpx",
    "invoke",
    "mypy",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "python-coveralls",
    "setuptools",
    "sphinx",
    "sphinx-rtd-theme",
]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = true
packages = ["units"]

[tool.setuptools.dynamic]
version = {attr = "units.__version__"}

[tool.pytest.ini_options]
addopts = "--cov units --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint]
max-args = 6

[tool.mypy]
ignore_missing_imports = true
